# workspace

cpp/Win32Console/: CMakeLists.txt  console_games.cpp  pingpong.cpp  shooter.cpp  snake.cpp  tankwar.cpp  tictactoe.cpp
cpp/Win32Console/common/: console_screen.h
cpp/Win32Console/games/: missionaries_cannibals.cpp  missionaries_cannibals.h  pingpong.cpp  pingpong.h  shooter.cpp  shooter.h  snake.cpp  snake.h  tankwar.cpp  tankwar.h  tetris.cpp  tetris.h  tictactoe.cpp  tictactoe.h
cpp/Win32Console/launcher/: launcher.cpp  launcher.h
cpp/Win32GUI/: CMakeLists.txt  README.md  app.cpp  app.h  arcade.cpp  arcade.h  games.cpp  games.h  main.cpp
cpp/Win32GUI/games/: missionaries.cpp  ping_pong.cpp  shooter.cpp  snake.cpp  tank_war.cpp  tetris.cpp  tic_tac_toe.cpp
octave/3dtest/: README.md  draw_car.m  draw_triangle.m  robot_simulate.m
python/game/: ping_pong.py  shooting_game.py  snake.py  tic_tac_toe.py
python/robotsim/: README.md  robot_arm_sim.py
python/simplecad2d/: README.md  app.py
python/simplecad3d/: README.md  requirements.txt
python/simplecad3d/src/: simplecad3d.py
python/utils/: README.md  replace_word_text.py  test_replace_word_text.py  word_text_replacer_gui.py
