cmake_minimum_required(VERSION 3.10)
project(PingPongWin32Console LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(pingpong pingpong.cpp)
add_executable(tictactoe tictactoe.cpp)
add_executable(snake snake.cpp)
add_executable(shooter shooter.cpp)
add_executable(tankwar tankwar.cpp)

if (WIN32)
    target_compile_definitions(pingpong PRIVATE UNICODE _UNICODE)
    target_compile_definitions(tictactoe PRIVATE UNICODE _UNICODE)
    target_compile_definitions(snake PRIVATE UNICODE _UNICODE)
    target_compile_definitions(shooter PRIVATE UNICODE _UNICODE)
    target_compile_definitions(tankwar PRIVATE UNICODE _UNICODE)
endif()
